Rename controllers method to match the documented API
